# orcamento_marcenaria

./: README.md  ranking.md
MarcenariaDotNet/: Program.cs
MarcenariaDotNet/Dtos/: MovelDto.cs
MarcenariaDotNet/Dtos/Geometrias/: Cilindro.cs  Cubo.cs  Esfera.cs  Geometria.cs  Paralelepipedo.cs
MarcenariaDotNet/Properties/: launchSettings.json
MarcenariaDotNet/Utils/: CentimeterConverter.cs  GeometriaConverter.cs  RealConverter.cs
challenge/: DESAFIO_DA_MARCENARIA.md
codes/dotnet/MarcenariaDotNet/: MarcenariaDotNet.http
codes/dotnet/MarcenariaDotNet/Dtos/: EstruturaValor.cs  Material.cs  Orcamento.cs
codes/dotnet/MarcenariaDotNet/Utils/: NumberUtils.cs
codes/go/marcenaria-go-fiber/: main.go
codes/go/marcenaria-go-fiber/docs/: docs.go  swagger.yaml
codes/go/marcenaria-go-hertz/: go.sum  main.go
codes/java/marcenaria-java-activej/: pom.xml
codes/java/marcenaria-java-vertx/: README.adoc  pom.xml
codes/java/marcenaria-spring/: pom.xml
codes/rust/marcenaria_rust_actix/: Cargo.toml
codes/rust/marcenaria_rust_actix/src/: main.rs
codes/rust/marcenaria_rust_actix/src/handlers/: geometrias_handler.rs  materiais_handler.rs  mod.rs  orcamento_handler.rs
codes/rust/marcenaria_rust_actix/src/models/: moveis.rs
codes/rust/marcenaria_rust_actix/src/utils/: serializer_utils.rs
codes/rust/marcenaria_rust_ntex/: Cargo.toml
java-vertx/: dependency-reduced-pom.xml  dockerfile  pom.xml  run.bat
marcenaria-java-activej/: .classpath  .gitignore  dependency-reduced-pom.xml  pom.xml
marcenaria-java-vertx/: .project
marcenaria-spring/: pom.xml
marcenaria_dotnet/: Program.cs  marcenaria_dotnet.csproj  marcenaria_dotnet.http  marcenaria_dotnet.sln
marcenaria_dotnet/Properties/: launchSettings.json
marcenaria_go_fiber/: .gitignore  doc.json  dockerfile  go.mod  go.sum  main.go
marcenaria_go_fiber/docs/: swagger.json
marcenaria_go_fiber/models/: geometrias.go  materiais.go  movel.go  orcamento.go
marcenaria_go_fiber/models/materiais/: materiais.go
marcenaria_go_fiber/utils/: str_utils.go
marcenaria_go_hertz/: .gitignore  go.mod
marcenaria_go_hertz/models/: geometria.go
marcenaria_go_hertz/utils/: num_utils.go
payloads/: request.json
payloads/examples/: cadeira.json  comoda.json  estante.json
rust_marcenaria/: Cargo.toml  dockerfile  rustfmt.toml
rust_marcenaria/src/: main.rs
rust_marcenaria/src/exceptions/: http_error.rs
rust_marcenaria/src/models/: final_result.rs  mod.rs
rust_marcenaria/src/models/geometrias/: geometria.rs
rust_marcenaria/src/models/madeiras/: mod.rs
rust_marcenaria/src/models/moveis/: mod.rs
rust_marcenaria/src/routes/: openapi.rs  orcamento.rs
rust_marcenaria/src/utils/: mod.rs  serializer_utils.rs  str_utils.rs  web_utils.rs
rust_marcenaria_actix/: .gitignore  Cargo.toml
rust_marcenaria_actix/src/: main.rs
rust_marcenaria_actix/src/handlers/: geometrias_handler.rs  materiais_handler.rs  orcamento_handler.rs
rust_marcenaria_actix/src/models/: geometrias.rs  moveis.rs  orcamento.rs
rust_marcenaria_actix/src/models/geometrias/: geometria.rs
rust_marcenaria_actix/src/models/madeiras/: mod.rs
rust_marcenaria_actix/src/utils/: mod.rs  num_utils.rs  serializer_utils.rs  str_utils.rs
rust_marcenaria_ntex/: Cargo.toml  dockerfile
rust_marcenaria_ntex/src/: main.rs
rust_marcenaria_ntex/src/models/: final_result.rs  materiais.rs  mod.rs  orcamento.rs
rust_marcenaria_ntex/src/routes/: mod.rs  openapi.rs  orcamento.rs
rust_marcenaria_ntex/src/utils/: mod.rs  serializer_utils.rs  web_utils.rs
(+164 files in other folders)
