[package]
name = "rust_marcenaria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.0.0", features = ["tokio"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
unicase = "2.7.0"
unicode-normalization = "0.1.22"
uom = { version = "0.35.0", features = ["use_serde"]}
utoipa = "4.2.0"
utoipa-swagger-ui = "6.0.0"
